--- a/app/src/main/res/layout/activity_admin_home_screen.xml
+++ b/app/src/main/res/layout/activity_admin_home_screen.xml
@@ -17,6 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:id="@+id/title"
             android:fontFamily="@font/open_sans_semibold"
             android:text="Admin"
             android:textColor="@color/white"
@@ -40,6 +41,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        app:labelVisibilityMode="unlabeled"
         app:menu="@menu/admin_bottom_menu">
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
