--- a/app/src/main/res/layout/quiz_admin_fragment.xml
+++ b/app/src/main/res/layout/quiz_admin_fragment.xml
@@ -12,4 +12,14 @@
 
     </androidx.recyclerview.widget.RecyclerView>
 
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:id="@+id/progress">
+
+    </ProgressBar>
+
+
 </RelativeLayout>
