--- a/app/src/main/res/layout/home_admin_fragment.xml
+++ b/app/src/main/res/layout/home_admin_fragment.xml
@@ -47,6 +47,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:id="@+id/quiz"
                         android:fontFamily="@font/open_sans_semibold"
                         android:text="--"
                         android:textSize="17dp">
@@ -76,6 +77,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:id="@+id/student"
                         android:fontFamily="@font/open_sans_semibold"
                         android:text="--"
                         android:textSize="17dp">
@@ -147,7 +149,7 @@
                         android:textSize="15sp" />
 
                     <TextView
-                        android:id="@+id/total"
+                        android:id="@+id/topName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -178,6 +180,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:id="@+id/topBatch"
                         android:layout_marginLeft="10dp"
                         android:fontFamily="@font/open_sans"
                         android:text="Featching ..."
@@ -202,7 +205,7 @@
                         android:textColor="@color/black" />
 
                     <TextView
-                        android:id="@+id/type"
+                        android:id="@+id/topAccuracy"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -241,7 +244,7 @@
                         android:layout_height="wrap_content">
 
                         <TextView
-                            android:id="@+id/id"
+                            android:id="@+id/quizid"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentStart="true"
@@ -279,6 +282,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginLeft="10dp"
+                        android:id="@+id/lastTopic"
                         android:fontFamily="@font/open_sans"
                         android:text="Featching ..."
                         android:textAlignment="center"
@@ -303,7 +307,7 @@
                         android:textSize="15sp" />
 
                     <TextView
-                        android:id="@+id/total"
+                        android:id="@+id/lastDate"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -334,6 +338,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:id="@+id/lastType"
                         android:layout_marginLeft="10dp"
                         android:fontFamily="@font/open_sans"
                         android:text="Featching ..."
@@ -358,7 +363,7 @@
                         android:textColor="@color/black" />
 
                     <TextView
-                        android:id="@+id/type"
+                        android:id="@+id/lastInitiated"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
