add question screen created

--- a/app/src/main/res/layout/questionitem.xml
+++ b/app/src/main/res/layout/questionitem.xml
@@ -24,7 +24,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/id"
+                    android:id="@+id/questionNo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
@@ -58,7 +58,7 @@
                 android:textSize="14sp" />
 
             <TextView
-                android:id="@+id/total"
+                android:id="@+id/Type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -87,7 +87,7 @@
                 android:textColor="@color/black" />
 
             <TextView
-                android:id="@+id/type"
+                android:id="@+id/answer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
