--- a/app/src/main/res/layout/activity_add_question_screen.xml
+++ b/app/src/main/res/layout/activity_add_question_screen.xml
@@ -19,8 +19,17 @@
         android:id="@+id/add"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_above="@+id/push"
         android:text="Add Question">
+
+    </com.google.android.material.button.MaterialButton>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/push"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:text="Create Quiz">
 
     </com.google.android.material.button.MaterialButton>
 
