--- a/app/src/main/res/layout/quiz_admin_fragment.xml
+++ b/app/src/main/res/layout/quiz_admin_fragment.xml
@@ -1,23 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="match_parent">
+
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/add"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:text="Take New Quiz">
+
+    </com.google.android.material.button.MaterialButton>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycleView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/recycleView"
+        android:layout_above="@+id/add"
         tools:listitem="@layout/quizadminitem">
 
     </androidx.recyclerview.widget.RecyclerView>
 
-
     <ProgressBar
+        android:id="@+id/progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:id="@+id/progress">
+        android:layout_centerInParent="true">
 
     </ProgressBar>
 
