--- a/app/src/main/res/layout/quizstudentitem.xml
+++ b/app/src/main/res/layout/quizstudentitem.xml
@@ -24,7 +24,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/id"
+                    android:id="@+id/name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
@@ -58,7 +58,7 @@
                 android:textSize="14sp" />
 
             <TextView
-                android:id="@+id/total"
+                android:id="@+id/roll"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -83,11 +83,39 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/open_sans"
-                android:text="Accuracy"
+                android:text="Batch"
                 android:textColor="@color/black" />
 
             <TextView
-                android:id="@+id/type"
+                android:id="@+id/batch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="10dp"
+                android:fontFamily="@font/open_sans"
+                android:text="2018IMG"
+                android:textAlignment="center"
+                android:textSize="14sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/open_sans"
+                android:text="Marks"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:id="@+id/marks"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
