Changed quiz details screen for scanning

--- a/app/src/main/res/layout/activity_admin_home_screen.xml
+++ b/app/src/main/res/layout/activity_admin_home_screen.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.AdminHomeScreen">
+    tools:context=".Activity.AdminHomeScreen"
+    android:orientation="vertical"
+    android:weightSum="6">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/header"
         android:background="@drawable/halfround"
-        android:gravity="center">
+        android:gravity="center"
+        >
 
         <TextView
             android:layout_width="wrap_content"
@@ -29,10 +32,11 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:id="@+id/fragment"
         android:layout_above="@+id/bottom"
-        android:layout_below="@+id/header">
+        android:layout_below="@+id/header"
+        android:layout_weight="6">
 
     </FrameLayout>
 
@@ -48,4 +52,4 @@
 
 
 
-</RelativeLayout>
+</LinearLayout>
