--- a/app/src/main/res/layout/activity_quiz_details_screen.xml
+++ b/app/src/main/res/layout/activity_quiz_details_screen.xml
@@ -21,6 +21,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </androidx.viewpager.widget.ViewPager>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/quiz_evaluation_list"
+        android:orientation="vertical">
+    </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
